# stock-notification

./: .gitignore  README.md  TODO.md  claude.md  config.example.yaml  pyproject.toml  requirements.txt  stock_noti_project_description.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  ORACLE_CLOUD.md  PRD.md  RULES.md  TESTING.md  USER_GUIDE.md
src/: app.py  cli.py  config.py  healthcheck.py  main.py
src/data/: fetcher.py  symbols.py
src/database/: connection.py  models.py  repository.py
src/notifiers/: base.py  discord.py  email.py
src/rules/: engine.py  types.py
tests/: conftest.py  test_database.py  test_fetcher.py  test_integration.py  test_models.py  test_notifiers.py  test_rules.py
